# rustycam

./: Cargo.toml
rustbench/: worker_thread.cpp
rustbench/c++/: worker_c++  worker_thread.cpp
rustbench/rust/: worker_rust  worker_thread.rs
src/: aoloop.rs  controller.rs  fakecamera.rs  fakedm.rs  main.rs  shmupdater.rs  wfs.rs
src/wfs/: centreofgravity.rs
